# ferrumfix

./: .clippy.toml  .cursorignore  .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BACKERS.yml  CLAUDE.md  Cargo.toml  FUNDING.yml  LICENSE-APACHE.txt  LICENSE-MIT.txt  LICENSE.txt  README.md  TODO.md  ZEN.txt  fix-example.json  justfile  rustfmt.toml  test-suite.sh
crates/fefast/: Cargo.toml
crates/fefast/src/: codec.rs  decimal.rs  dtf.rs  errors.rs  lib.rs  template.rs
crates/fefix/: Cargo.toml  build.rs
crates/fefix-codegen/: Cargo.toml
crates/fefix-codegen/src/: lib.rs
crates/fefix-derive/: Cargo.toml
crates/fefix-derive/src/: derive_fix_value.rs  lib.rs
crates/fefix-dictionary/: Cargo.toml
crates/fefix-dictionary/src/: builder.rs  fix_datatype.rs  lib.rs  quickfix.rs
crates/fefix/benches/: fix_decode.rs
crates/fefix/src/: buffer.rs  definitions.rs  field_access.rs  fix_value.rs  lib.rs  prelude.rs  random_field_access.rs  set_field.rs
crates/fefix/tests/: repeating_group_bug.rs
crates/fefixp/: Cargo.toml
crates/fefixp/src/: lib.rs
crates/fefixs/: Cargo.toml
crates/fefixs/src/: iana2openssl.rs  iana_to_openssl.rs  lib.rs
crates/fesofh/: Cargo.toml
crates/fesofh/src/: encoding_type.rs  frame.rs  lib.rs  seq_decoder.rs  tokio_codec.rs
crates/rustyfast/: Cargo.toml
crates/rustyfast/src/: codec.rs  codegen.rs  data_type_field.rs  decimal.rs  errors.rs  field_operators.rs  lib.rs  template.rs
crates/rustyfix/: Cargo.toml  build.rs
crates/rustyfix-codegen/: Cargo.toml
crates/rustyfix-codegen/src/: lib.rs
crates/rustyfix-codegen/tests/: codegen_fix44.rs
crates/rustyfix-derive/: Cargo.toml
crates/rustyfix-derive/src/: derive_fix_value.rs  lib.rs
crates/rustyfix-dictionary/: Cargo.toml
crates/rustyfix-dictionary/src/: builder.rs  fix_datatype.rs  lib.rs  quickfix.rs
crates/rustyfix/benches/: fix_decode.rs
crates/rustyfix/src/: buffer.rs  definitions.rs  field_access.rs  lib.rs  prelude.rs  validation.rs
crates/rustyfix/tests/: regression_tainted_decoder_fix44.rs
crates/rustyfixml/: Cargo.toml
crates/rustyfixml/src/: decoder.rs  encoder.rs  error.rs  lib.rs  message.rs  schema.rs
crates/rustyfixp/: Cargo.toml
crates/rustyfixp/src/: lib.rs
crates/rustyfixs/: Cargo.toml
crates/rustyfixs/src/: lib.rs
crates/rustygpb/: Cargo.toml
crates/rustygpb/src/: buffer.rs  decoder.rs  encoder.rs  error.rs  lib.rs  message.rs
crates/rustysbe/: Cargo.toml  build.rs
crates/rustysbe/resources/: sbe.xml
crates/rustysbe/src/: buffer.rs  codegen.rs  decoder.rs  encoder.rs  error.rs  lib.rs  message.rs
crates/rustysofh/: Cargo.toml
crates/rustysofh/src/: encoding_type.rs  frame.rs  lib.rs  tokio_codec.rs
examples/10_encode_new_order_single/: Cargo.toml
examples/10_encode_new_order_single/src/: main.rs
examples/20_fix_initiator/: Cargo.toml  quickfix_executor_config.ini
examples/20_fix_initiator/src/: main.rs
examples/20_tokio_fix_initiator/: Cargo.toml  quickfix_executor_config.ini
examples/20_tokio_fix_initiator/src/: main.rs
fasters/: Cargo.toml  build.rs
fasters/resources/tagvalue/: 0001.txt
fasters/src/: datatypes.rs  dict.rs  dictionary.rs  engines.rs  err.rs  example.com.cert.pem  example.com.key.pem  fix42.rs  fix_codegen.rs  internals.rs  ir.rs  lib.rs  mod.rs  prelude.rs  repo.rs  settings.rs  sofh.rs  spec.rs  stream_iterator.rs  tagvalue.rs  utils.rs  version.rs
fasters/src/app/: dictionary.rs  fix42.rs  mod.rs  slr.rs
fasters/src/codec/: json.rs  mod.rs  sofh.rs  tagvalue.rs
fasters/src/codegen/: messages.rs
fasters/src/encoders/: json.rs  mod.rs  sofh.rs  tagvalue.rs
fasters/src/encodings/: mod.rs  tagvalue.rs
fasters/src/fast/: field.rs
fasters/src/presentation/: json.rs  mod.rs  tagvalue.rs
fasters/src/resources/: fix-messages.txt
fasters/src/session/: classic.rs  mod.rs  new_classic.rs
fasters/src/transport/: fixs.rs  mod.rs
fasters_derive/: Cargo.toml
fasters_derive/src/: lib.rs
fasters_internals/: Cargo.toml
fasters_internals/src/: data_types.rs  dict.rs  fix.rs  lib.rs  repo.rs  settings.rs  version.rs
fasters_internals/src/fast/: template.rs
fasters_internals/src/fix/: mod.rs
fefix/: Cargo.toml  build.rs  test.env
fefix/benches/: fix_decode.rs
fefix/src/: app_version.rs  buffer.rs  buffering.rs  codegen.rs  data_type.rs  definitions.rs  dict.rs  dictionary.rs  dt.rs  dtf_date.rs  dtf_monthyear.rs  dtf_mulchar.rs  dtf_mulstr.rs  dtf_time.rs  dtf_timestamp.rs  engines.rs  fix_codegen.rs  fix_data_type.rs  fix_value.rs  fixp.rs  fixs.rs  lib.rs  mod.rs  msgtypemap.rs  prelude.rs  quickfix_specs.rs  stream_iterator.rs  tagmap.rs  utils.rs
fefix/src/app/: fix42.rs  mod.rs  slr.rs  value.rs
fefix/src/backend/: fix42.rs  mod.rs  seqdump.rs  slr.rs  value.rs
fefix/src/codec/: json.rs  mod.rs  sofh.rs  tagvalue.rs
fefix/src/datatypes/: checksum.rs  date.rs  error.rs  mod.rs  monthyear.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs
fefix/src/definitions/: .gitignore  fix40.rs  fix41.rs  fix42.rs  fix43.rs  fix44.rs  fix50.rs  fix50sp1.rs  fix50sp2.rs  fixt11.rs  mod.rs
fefix/src/dtf/: checksum.rs  date.rs  error.rs  mod.rs  monthyear.rs  multiple_chars.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs
fefix/src/fast/: codec.rs  codegen.rs  decimal.rs  dtf.rs  mod.rs  template.rs
fefix/src/fefix_core/: codegen.rs  dict.rs  mod.rs
fefix/src/fields/: mod.rs
fefix/src/fix_values/: checksum.rs  date.rs  error.rs  mod.rs  monthyear.rs  multiple_chars.rs  multiple_strings.rs  time.rs  timestamp.rs  tz.rs  tz_time.rs  tz_timestamp.rs
fefix/src/fixs/: iana2openssl.json  iana2openssl.rs  mod.rs
fefix/src/json/: codec.rs  config.rs  decoder.rs  encoder.rs  message.rs  mod.rs
fefix/src/models/: field_value.rs  mod.rs  (+2 more)
fefix/tests/: fixt_11.rs  mod.rs
fefix_derive/: Cargo.toml
fefix_derive/src/: derive_data_field.rs  derive_data_type.rs  derive_field_value.rs  derive_fix_value.rs  derive_read_fields.rs  lib.rs
fefixp/: Cargo.toml
fefixs/: Cargo.toml
fefixs/src/: iana_to_openssl.rs
(+641 files in other folders)
