# RustyFix Workspace Configuration
# Financial Information eXchange (FIX) protocol implementation in pure Rust

[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
authors = ["cognitive-glitch", "Team Rusty Trading", "Filippo Neysofu Costa"]
version = "0.7.2"
edition = "2024"
homepage = "https://github.com/rusty-trading/rusty-fix-engine"
repository = "https://github.com/rusty-trading/rusty-fix-engine"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust"
publish = true
readme = "README.md"
keywords = ["fix", "fast", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "Apache-2.0"

# Workspace-wide linting configuration
[workspace.lints.rust]
rust-2024-compatibility = "warn"
rust-2024-incompatible-pat = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Performance lints
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
# Correctness lints  
fallible_impl_from = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Release profile - optimized for production performance
[profile.release]
lto = true              # Enable link-time optimization
opt-level = 3           # Maximum optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip debug symbols
debug = false           # No debug info
overflow-checks = false # Disable overflow checks for performance
rpath = false           # Disable rpath
panic = "abort"         # Abort on panic for smaller binary

# Release build dependencies optimization  
[profile.release.build-override]
opt-level = 3
codegen-units = 1

# Package-specific release optimization
[profile.release.package."*"]
opt-level = 3

# Development profile - optimized for fast compile times
[profile.dev]
incremental = false    # Disable incremental compilation for macro-heavy code
opt-level = 0          # No optimization for fastest builds
debug = true           # Enable debug info
overflow-checks = true # Enable overflow checks for safety

# Build script optimization for development
[profile.dev.build-override]
# Helps with compile times for macro-heavy code
# See: https://corrode.dev/blog/tips-for-faster-rust-compile-times/
opt-level = 1

# Shared dependencies across workspace crates
# Following project guidelines to use high-performance alternatives
[workspace.dependencies]
# Core performance libraries (mandatory per guidelines)
rustc-hash = "2.1" # Fast non-cryptographic hashing
simd-json = "0.15" # High-performance JSON parsing
quanta = "0.12" # High-resolution timing
parking_lot = { version = "0.12", features = [
    "serde",
] } # Use parking_lot for thread-safe synchronization
thiserror = "2.0" # Error handling

# Collections and data structures
smallvec = { version = "1.15", features = ["serde"] }
arrayvec = { version = "0.7", features = ["serde"] }
smartstring = { version = "1.0", features = ["serde"] }
crossbeam-skiplist = "0.1"
dashmap = { version = "6.1", features = [
    "serde",
] } # Lock-free concurrent hashmap
smallbytes = "0.1" # Small byte arrays; Use instead of `bytes` crate from tokio team

# Enhanced SIMD Operations
wide = "0.7"         # Stable Rust SIMD abstraction
simd_aligned = "0.6" # Guaranteed SIMD memory alignment

# Zero-Copy
zerocopy = { version = "0.8", features = [
    "derive",
] } # Zero-copy data manipulations
zerocopy-derive = "0.8" # Derive macros for zerocopy

# Logging and tracing
fastrace = "0.7"       # Use fastrace instead of tracing
fastrace-macro = "0.7"
log = "0.4"            # Use log's comfortable macros

# Async/networking libraries  
tokio = { version = "1.42", features = ["full"] }
tachyonix = "0.3.1"                               # High-performance channels

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Testing utilities
criterion = "0.6" # Benchmarking

# FIX protocol specific
rust_decimal = { version = "1.37", features = ["macros"] }
