# RustyFix Workspace Configuration
# Financial Information eXchange (FIX) protocol implementation in pure Rust

[workspace]
members = [
    "crates/*",
    "examples/*",
    "crates/rustysbe",
    "crates/rustygpb",
    "crates/rustyfixml",
]
resolver = "2"

[workspace.package]
authors = ["cognitive-glitch", "Team Rusty Trading", "Filippo Neysofu Costa"]
version = "0.7.4"
edition = "2024"
homepage = "https://github.com/rusty-trading/rusty-fix-engine"
repository = "https://github.com/rusty-trading/rusty-fix-engine"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust"
publish = true
readme = "README.md"
keywords = [
    "fix",
    "fix-protocol",
    "quickfix",
    "fix-engine",
    "fix-parser",
    "fast",
    "protocol",
    "trading",
    "finance",
    "fintech",
]
categories = [
    "network-programming",
    "parser-implementations",
    "encoding",
    "fix-engine",
    "fix-parser",
    "fix-protocol",
    "quickfix",
    "fast",
]
license = "Apache-2.0"

# Workspace-wide linting configuration
[workspace.lints.rust]
rust-2024-compatibility = "warn"
rust-2024-incompatible-pat = "warn"

[workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# Performance lints
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
# Correctness lints  
fallible_impl_from = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Release profile - optimized for production performance
[profile.release]
lto = true              # Enable link-time optimization
opt-level = 3           # Maximum optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true            # Strip debug symbols
debug = false           # No debug info
overflow-checks = false # Disable overflow checks for performance
rpath = false           # Disable rpath
panic = "abort"         # Abort on panic for smaller binary

# Release build dependencies optimization  
[profile.release.build-override]
opt-level = 3
codegen-units = 1

# Package-specific release optimization
[profile.release.package."*"]
opt-level = 3

# Development profile - optimized for fast compile times
[profile.dev]
incremental = false    # Disable incremental compilation for macro-heavy code
opt-level = 0          # No optimization for fastest builds
debug = true           # Enable debug info
overflow-checks = true # Enable overflow checks for safety

# Build script optimization for development
[profile.dev.build-override]
# Helps with compile times for macro-heavy code
# See: https://corrode.dev/blog/tips-for-faster-rust-compile-times/
opt-level = 1

[workspace.dependencies]
syn = { version = "2", features = ["full", "parsing", "derive"] }
thiserror = "2.0"
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }
bitvec = "1.0.1"
bytes = "1"
chrono = "0.4"
criterion = "0.6"
crossbeam-skiplist = "0.1"
darling = "0.21"
dashmap = { version = "6.1", features = ["serde"] }
decimal = "2"
enum-as-inner = "0.6"
env_logger = "0.11"
fastrace = "0.7"
fastrace-macro = "0.7"
futures = "0.3"
futures-timer = "3"
futures-util = "0.3"
heck = "0.5"
inquire = "0.7"
indoc = "2"
lazy_static = "1.5.0"
log = "0.4"
nohash-hasher = "0.2"
openssl = "0.10"
parking_lot = { version = "0.12", features = ["serde"] }
proc-macro-crate = "3"
proc-macro2 = "1"
quanta = "0.12"
quick-xml = "0.38"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
quote = "1"
rayon = "1"
roxmltree = "0.20"
rust_decimal = { version = "1.37", features = ["macros"] }
rust_decimal_macros = "1.37.1"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
simd-json = "0.15"
simd_aligned = "0.6"
slog = "2"
slog-async = "2"
slog-term = "2"
smallbytes = "0.1"
smallvec = { version = "1.15", features = ["serde"] }
smartstring = { version = "1.0", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
uuid = { version = "1", features = ["v4"] }
wide = "0.7"
zerocopy = { version = "0.8", features = ["derive"] }
zerocopy-derive = "0.8"
