[package]
name = "fasters"
version = "0.5.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/fasters"
repository = "https://github.com/neysofu/fasters"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust."
publish = true
readme = "README.md"
keywords = ["fix", "fast", "protocol", "finance", "streaming"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT"

[lib]
name = "fasters"

[features]
repo_v50sp2ep254 = [ ]
repo_v2010 = [ ]
default = [ "repo_v2010", "repo_v50sp2ep254" ]

[dependencies]
bitvec = "0.18.3"
codegen = "0.1.3"
Inflector = "0.11.4"
roxmltree = "0.13.0"
rust-embed="5.7.0"
uuid = "0.8.1"
fasters_derive = { path = "../fasters_derive" }
fasters_internals = { path = "../fasters_internals" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
syn = "1"

[build-dependencies]
fasters_internals = { path = "../fasters_internals" }