[package]
name = "fasters_derive"
version = "0.2.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/fasters"
repository = "https://github.com/neysofu/fasters"

[lib]
name = "fasters_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
