[package]
name = "fefix"
version = "0.4.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/ferrum-fix"
repository = "https://github.com/neysofu/ferrum-fix"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust."
publish = true
readme = "../README.md"
keywords = ["fix", "fast", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

[lib]
name = "fefix"

[features]
default = ["repo_v2010", "repo_v50sp2ep254", "expose_openssl", "expose_tokio"]
chrono-time = []
repo_v50sp2ep254 = []
repo_v2010 = []
expose_openssl = []
expose_tokio = []

[dependencies]
bitvec = "0.18.3"
bytes = "1"
boolinator = "2.4.0"
chrono = "0.4"
fixed = "1.6"
futures = "0.3.8"
futures-lite = "1"
Inflector = "0.11"
openssl = "0.10"
quick-xml = "0.22"
phf = { version = "0.8", features = ["macros"] }
roxmltree = "0.14"
serde = "1"
serde_json = "1"
strum = "0.20"
strum_macros = "0.20"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }
fefix_derive = { path = "../fefix_derive" }

[build-dependencies]
Inflector = "0.11"
quick-xml = "0.22"
roxmltree = "0.14"
rayon = "1"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
enum-as-inner = "0.3"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version = "1", features = ["full"] }