[package]
name = "fefix"
version = "0.4.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/ferrum-fix"
repository = "https://github.com/neysofu/ferrum-fix"
description = "FIX & FAST (FIX Adapted for STreaming) in pure Rust."
publish = true
readme = "../README.md"
keywords = ["fix", "fast", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

[lib]
name = "fefix"

[[bench]]
name = "fix_decode"
harness = false

[features]
default = ["fix44", "expose_openssl", "expose_tokio", "chrono_time"]
fix40 = []
fix41 = []
fix42 = []
fix43 = []
fix44 = []
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []
chrono_time = []
repo_v50sp2ep254 = []
repo_v2010 = []
expose_openssl = []
expose_tokio = []

[dependencies]
bitvec = "0.18.3"
bytes = "1"
boolinator = "2.4.0"
chrono = "0.4"
fixed = "1.6"
fnv = "1"
futures = "0.3"
futures-timer = "3"
futures-lite = "1"
heck = "0.3"
indoc = "1"
lazy_static = "1"
openssl = "0.10"
quick-xml = "0.22"
rand = "0.8"
roxmltree = "0.14"
rust_decimal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slog = "2"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
strum = "0.20"
strum_macros = "0.20"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }
fefix_derive = { path = "../fefix_derive" }

[build-dependencies]
chrono = "0.4"
fnv = "1"
heck = "0.3"
indoc = "1"
lazy_static = "1"
quick-xml = "0.22"
roxmltree = "0.14"
rayon = "1"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.3"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version = "1", features = ["full"] }