[package]
name = "fefix_derive"
version = "0.3.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/fefix"
repository = "https://github.com/neysofu/fefix"
description = "Code generation for FerrumFIX"
publish = true
keywords = ["fix", "fast", "protocol", "finance", "streaming"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT"

[lib]
name = "fefix_derive"
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro2 = "1"
quote = "1"
syn = "1"
