[package]
name = "fefix_derive"
version = "0.5.0"
edition = "2018"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/ferrum-fix"
repository = "https://github.com/neysofu/ferrum-fix"
description = "Code generation for FerrumFIX"
publish = true
keywords = ["fix", "fast", "protocol", "finance", "streaming"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

[lib]
name = "fefix_derive"
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive", "parsing"] }
