[package]
name = "fefixp"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/neysofu/ferrum-fix"
repository = "https://github.com/neysofu/ferrum-fix"
description = "FIXS implementation in pure Rust."
publish = true
edition = "2018"
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"
