[package]
name = "fefast"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
edition = "2021"
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
publish = true
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
description = "FIX FAST implementation in pure Rust"
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fefast"

[dependencies]
bitvec = "0.18.3"
decimal = { version="2", optional=true }
heck = "0.3"
indoc = "1"
# For reading XML.
roxmltree = "0.14"

[build-dependencies]
chrono = "0.4"
heck = "0.3"
indoc = "1"
lazy_static = "1"
quick-xml = "0.22"
roxmltree = "0.14"
rayon = "1"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
arbitrary = { version="1.0", features=["derive"] }
criterion = { version="0.3", features=["html_reports"] }
enum-as-inner = "0.3"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version="1", features=["parsing"] }
