[package]
name = "fefast"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fefast"

[dependencies]
bitvec = "0.18.3"
decimal = { version = "2", optional = true }
heck = "0.3"
indoc = "2"
# For reading XML.
roxmltree = "0.14"

[build-dependencies]
chrono = "0.4"
heck = "0.3"
indoc = "2"
lazy_static = "1"
quick-xml = "0.23"
roxmltree = "0.14"
rayon = "1"
strum = "0.20"
strum_macros = "0.25"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.6"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version = "1", features = ["parsing"] }
