[package]
name = "fefix-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4"
fefix-dictionary = { version = "0.7", path = "../fefix-dictionary" }
fnv = "1"
heck = "0.4"
indoc = "2"
strum = "0.25"
strum_macros = "0.26"

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.6"
fefix-dictionary = { version = "0.7", path = "../fefix-dictionary", features = ["fix40", "fix41", "fix42", "fix43", "fix50"] }
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
syn = { version = "1", features = ["parsing", "full"] }
