[package]
name = "fefix-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "fefix_derive"
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro-crate = "2"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive", "parsing"] }
